--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
+    "@rainbow-me/rainbowkit": "^1.3.2",
+    "@tanstack/react-query": "4.36.1",
     "@types/pino-pretty": "^5.0.0",
+    "@wagmi/core": "^2.6.13",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.0.22",
     "jotai": "^2.7.2",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "wagmi": "1.4.8"
   },
   "devDependencies": {
     "@types/node": "^20",
