--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "4.36.1",
     "@types/pino-pretty": "^5.0.0",
     "@wagmi/core": "^2.6.13",
+    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.0.22",
     "jotai": "^2.7.2",
@@ -21,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "siwe": "^2.1.4",
     "wagmi": "1.4.8"
   },
   "devDependencies": {
