--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@wagmi/core": "^2.6.13",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "ethers": "^6.11.1",
     "framer-motion": "^11.0.22",
     "jotai": "^2.7.2",
     "next": "14.1.4",
