--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API=http://127.0.0.1:80
-#http://83.147.245.88/
+NEXT_PUBLIC_API=http://bridge.dex-dsolution.com/api
+#http://83.147.245.88
