--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_API=https://bridge.dex-dsolution.com/api
+NEXT_PUBLIC_API=http://127.0.0.1:3001/api
+#https://bridge.dex-dsolution.com/api
 #http://83.147.245.88
