--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API=http://localhost/api
+NEXT_PUBLIC_API=https://bridge.dex-dsolution.com/api
 #https://bridge.dex-dsolution.com/api
 #http://83.147.245.88/api
